[package]
name = "executionbackup-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.16", features = ["headers"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1.0"
futures = { version = "0.3"}
jsonwebtoken = "8"
serde = {version = "1.0", features = ["derive"] }
hex = "0.4"
chrono = "0.4"
clap = "2.33.3"
headers = "0.3"
